Update author meta tag and Open Graph/Twitter image paths in index.html for consistency and improved SEO.

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Balanceè - Smart Repair Booking</title>
     <meta name="description" content="Book your car repair service with Balanceè - fast and efficient repair services" />
-    <meta name="author" content="Balanceè" />
+    <meta name="author" content="Cybersmith" />
 
     <meta property="og:title" content="Balanceè - Smart Repair Booking" />
     <meta property="og:description" content="Book your car repair service with Balanceè - fast and efficient repair services" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/ogimage.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@_cybersmith" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/ogimage.png" />
     
     <!-- Load Geist font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
